--- a/app/src/main/res/values-hr/strings-hr.xml
+++ b/app/src/main/res/values-hr/strings-hr.xml
@@ -992,4 +992,57 @@
     <string name="simplify_graphs_by_smoothing_out_irregularities">Pojednostavite grafikone izglađivanjem nepravilnosti</string>
     <string name="graph_smoothing">Izglađivanje grafikona</string>
     <string name="last_reading">Zadnje očitanje</string>
+    <string name="show_unsmoothed">Prikaži neuglađeno</string>
+    <string name="show_unsmoothed_summary">Prikaži i neizglađene podatke ako je omogućeno izglađivanje grafikona. Ako se koristi dodatak za kalibraciju, prikazat će neizglađene podatke umjesto podataka dodatka.</string>
+    <string name="you_can_use_google_drive_for_backup">Za sigurnosno kopiranje možete koristiti Google disk</string>
+    <string name="select_backup_location">Odaberite lokaciju sigurnosne kopije</string>
+    <string name="do_backup_now">Napravite sigurnosnu kopiju sada</string>
+    <string name="automatic_daily_backup">Automatsko dnevno sigurnosno kopiranje</string>
+    <string name="restore_from_backup">Vrati podatke iz sigurnosne kopije</string>
+    <string name="are_you_really_sure_question">Jeste li stvarno sigurni?</string>
+    <string name="backup_source_confirm">Potvrda izvora sigurnosne kopije</string>
+    <string name="nothing_to_restore_please_select">Ništa za vraćanje - odaberite lokaciju</string>
+    <string name="no_backup_location_set">Nije određena lokacija za pričuvne kopije</string>
+    <string name="backing_up">Sigurnosno kopiranje</string>
+    <string name="did_backup_ok">Sigurnosna kopija je u redu</string>
+    <string name="backup_failed">Sigurnosno kopiranje nije uspjelo</string>
+    <string name="automatically_manage_backup">Automatski upravljaj</string>
+    <string name="use_alternate_file">Koristite alternativnu datoteku</string>
+    <string name="choose_backup_file">Odaberite datoteku sigurnosne kopije</string>
+    <string name="select_alternate_file">Odaberite alternativnu datoteku</string>
+    <string name="change_account">Promijeni račun</string>
+    <string name="keep_same_account">Zadrži postojeći račun</string>
+    <string name="change_google_account">Promjena Google računa</string>
+    <string name="attempting_restore">Pokušaj vraćanja</string>
+    <string name="restore_succeeded_restarting">Vraćanje je uspjelo - ponovno pokretanje aplikacije</string>
+    <string name="restore_failed">Vraćanje NIJE USPJELO!</string>
+    <string name="error_exclamation">Greška!</string>
+    <string name="checking_file">Provjera datoteke</string>
+    <string name="failed_to_read_file">Failed to read file</string>
+    <string name="permission_problem_retry">Problem s dopuštenjem - pokušaj ponovno</string>
+    <string name="alternate_file_selected">Odabrana je alternativna datoteka</string>
+    <string name="temporary_google_drive_file">Privremena datoteka Google diska</string>
+    <string name="no_file_was_chosen">Nijedna datoteka nije odabrana</string>
+    <string name="could_not_sign_in">Nije bilo moguće prijaviti se</string>
+    <string name="problem_with_file_selection">Problem s odabirom datoteke</string>
+    <string name="selected_file_location">Odabrano mjesto datoteke</string>
+    <string name="please_reselect_backup_file">Molimo ponovno odaberite datoteku sigurnosne kopije</string>
+    <string name="ready">Spreman</string>
+    <string name="uploading_to_cloud">Prijenos u oblak</string>
+    <string name="error_with_local_backup">Pogreška s lokalnom sigurnosnom kopijom</string>
+    <string name="upload_successful">Učitavanje uspješno</string>
+    <string name="error_uploading_to_cloud">Pogreška pri prijenosu u oblak</string>
+    <string name="creating_local_backup">Stvaranje lokalne sigurnosne kopije</string>
+    <string name="output_error">Greška izlaza:</string>
+    <string name="security_error">Sigurnosna pogreška:</string>
+    <string name="please_grant_permission">Molimo dajte dopuštenje</string>
+    <string name="drive_permission_blurb">Za automatsko sigurnosno kopiranje xDrip treba dopuštenje za korištenje vašeg Google diska.\n\nxDrip programeri ne mogu pristupiti vašim datotekama niti vidjeti vaše osobne podatke.</string>
+    <string name="cloud_backup">Sigurnosna kopija u oblaku</string>
+    <string name="select_automatic_or_select_alternate">Odaberite Automatski za xDrip za upravljanje datotekama na Google disku ili odaberite alternativnu određenu datoteku za korištenje ako je trebate vratiti s drugog mjesta.</string>
+    <string name="restoring_backup_will_erase_warning">Vraćanje sigurnosne kopije izbrisat će vaše trenutne postavke i podatke s njima iz sigurnosne kopije.\n\nJeste li potpuno sigurni da to želite učiniti?</string>
+    <string name="this_backup_looks_like_came_from_different_format_string">Ova sigurnosna kopija izgleda kao da je došla s drugog uređaja:\n%s\nJeste li sigurni da želite vratiti iz ove sigurnosne kopije?</string>
+    <string name="megabyte_format_string">%.1f MB</string>
+    <string name="manual_selection_google_drive_file_warning">Odabrali ste datoteku s Google diska, ali njome ne upravlja automatski xDrip pa se može koristiti samo za ručno sigurnosno kopiranje i vraćanje.\n\nNeće se dogoditi automatsko sigurnosno kopiranje ove datoteke.\n\nNastaviti?
+CONTEXTREQUEST?</string>
+    <string name="alternate_file_selected_warning">Odabrali ste alternativnu datoteku. Obično bi to bilo samo vraćanje iz lokalno pohranjene sigurnosne kopije.\n\nNeće se dogoditi automatsko sigurnosno kopiranje ove datoteke.\n\nNastaviti?</string>
 </resources>
