--- a/app/src/main/res/values-pl/strings-pl.xml
+++ b/app/src/main/res/values-pl/strings-pl.xml
@@ -1572,5 +1572,50 @@
     <string name="please_update_OOP2_or_move_to_calibrate_based_on_raw_mode">proszę zaktualizuj OOP2 albo wybierz kalibrację w oparciu o dane surowe</string>
     <string name="graph_smoothing">Wygładzanie wykresu</string>
     <string name="last_reading">Ostatni odczyt</string>
+    <string name="select_file_for_alert">Wybierz plik dla alarmu</string>
     <string name="cannot_choose_file_without_permission">Nie można wybrać pliku bez uprawnień do przechowywania</string>
+    <string name="select_time">Wybierz Czas</string>
+    <string name="select_tone_for_alerts">Wybierz dźwięk dla alarmów</string>
+    <string name="show_unsmoothed">Pokaż niewygładzone</string>
+    <string name="show_unsmoothed_summary">Pokaż niewygładzone dane również, jeśli wygładzanie wykresu jest włączone. Jeśli używana jest wtyczka kalibracyjna, pokaże niewygładzone dane zamiast danych wtyczki.</string>
+    <string name="you_can_use_google_drive_for_backup">Możesz użyć Dysku Google do tworzenia kopii zapasowej</string>
+    <string name="select_backup_location">Wybierz lokalizację kopii zapasowej</string>
+    <string name="do_backup_now">Wykonaj kopię zapasową teraz</string>
+    <string name="automatic_daily_backup">Automatyczna codzienna kopia zapasowa</string>
+    <string name="restore_from_backup">Przywróć z kopii zapasowej</string>
+    <string name="are_you_really_sure_question">Jesteś pewien?</string>
+    <string name="backup_source_confirm">Potwierdzenie źródła kopii zapasowej</string>
+    <string name="no_backup_location_set">Nie ustawiono lokalizacji kopii zapasowej</string>
+    <string name="backing_up">Tworzenie kopii zapasowej</string>
+    <string name="did_backup_ok">Kopia zapasowa ok</string>
+    <string name="backup_failed">Kopia zapasowa nie powiodła się</string>
+    <string name="automatically_manage_backup">Zarządzaj automatycznie</string>
+    <string name="choose_backup_file">Wybierz plik kopii zapasowej</string>
+    <string name="change_account">Zmień konto</string>
+    <string name="keep_same_account">Zachowaj to samo konto</string>
+    <string name="change_google_account">Zmień konto Google</string>
+    <string name="attempting_restore">Próba przywrócenia</string>
+    <string name="restore_succeeded_restarting">Przywracanie zakończone powodzeniem - ponowne uruchomienie aplikacji</string>
+    <string name="restore_failed">Przywracanie nie powiodło się!</string>
+    <string name="error_exclamation">Błąd!</string>
+    <string name="checking_file">Sprawdzanie pliku</string>
+    <string name="failed_to_read_file">Nie udało się odczytać pliku</string>
+    <string name="permission_problem_retry">Problem z uprawnieniami - ponów próbę</string>
+    <string name="no_file_was_chosen">Nie wybrano pliku</string>
+    <string name="could_not_sign_in">Nie udało się zalogować</string>
+    <string name="problem_with_file_selection">Problem z wyborem pliku</string>
+    <string name="selected_file_location">Wybrana lokalizacja pliku</string>
+    <string name="please_reselect_backup_file">Proszę ponownie wybrać plik kopii zapasowej</string>
+    <string name="ready">Gotowy</string>
+    <string name="uploading_to_cloud">Przesyłanie do chmury</string>
+    <string name="error_with_local_backup">Błąd lokalnej kopii zapasowej</string>
+    <string name="upload_successful">Przesyłanie zakończone powodzeniem</string>
+    <string name="error_uploading_to_cloud">Błąd podczas przesyłania do chmury</string>
+    <string name="creating_local_backup">Tworzenie lokalnej kopii zapasowej</string>
+    <string name="please_grant_permission">Proszę przyznaj uprawnienia</string>
+    <string name="drive_permission_blurb">Aby automatycznie utworzyć kopię zapasową xDrip potrzebuje uprawnień do korzystania z twojego Dysku Google.\n\nDeweloperzy xDrip nie mogą uzyskać dostępu do żadnych plików ani zobaczyć Twoich danych osobowych.</string>
+    <string name="cloud_backup">Kopia zapasowa w chmurze</string>
+    <string name="restoring_backup_will_erase_warning">Przywracanie kopii zapasowej usunie Twoje bieżące ustawienia i dane z kopii zapasowej.\n\nCzy na pewno chcesz to zrobić?</string>
+    <string name="this_backup_looks_like_came_from_different_format_string">Ta kopia zapasowa wygląda jakby pochodziła z innego urządzenia:\n%s\nCzy na pewno chcesz przywrócić z tej kopii zapasowej?</string>
+    <string name="megabyte_format_string">%.1f MB</string>
 </resources>
