--- a/app/src/main/res/values-he/strings-he.xml
+++ b/app/src/main/res/values-he/strings-he.xml
@@ -1530,4 +1530,7 @@
     <string name="graph_smoothing">החלקת הגרף</string>
     <string name="last_reading">קריאה אחרונה</string>
     <string name="cannot_choose_file_without_permission">אין אפשרות לבחור קובץ בלי הרשאה לאחסון</string>
+    <string name="show_unsmoothed">הראה לא מוחלק</string>
+    <string name="show_unsmoothed_summary">הראה מידע לא מוחלק גם עם החלקת הגרף מאופשרצ, 
+אם תוסף הכיול בשימוש יוצג גרף לא מוחלק ולא הגרף מהתוסף.</string>
 </resources>
